--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
