--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/hooks": "^7.17.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "next-pwa": "^5.6.0",
