--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/hooks": "^7.17.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "next-pwa": "^5.6.0",
@@ -18,7 +19,8 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
-    "sonner": "^2.0.1"
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
