--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.1",
+    "sweetalert2": "^11.17.2",
     "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
