--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/hooks": "^7.17.1",
+    "@radix-ui/react-progress": "^1.1.2",
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
     "lucide-react": "^0.477.0",
